<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/string_kullaniciadi"
        android:id="@+id/txtKaydolKullaniciAdi"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtKaydolParola"
        android:layout_below="@+id/txtKaydolKullaniciAdi"
        android:layout_centerHorizontal="true"
        android:hint="@string/string_parola" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_kaydol"
        android:id="@+id/btnKaydolGiris"
        android:layout_below="@+id/txtKaydolParola"
        android:layout_alignRight="@+id/txtKaydolParola"
        android:layout_alignEnd="@+id/txtKaydolParola" />

</RelativeLayout>
